--- a/silogy.yml
+++ b/silogy.yml
@@ -2,6 +2,6 @@
 # A job is a grouping of tests based on those that should be run together.
 # A pipeline specifies which jobs ( = groups of tests) should be run at a certain time.
 version: 1
-test_suites:
+test_lists:
   - name: simple_sanity
     path: silogy_base.otl.yaml
